* Reworked logic of determining which article states (read/unread/starred/unstarred) have changed when synchronizing states to remote feed servers. This concerns all synchronized plugins like Gmail, Greader, Feedly, etc. and show in theory lead to much better performance when you mark many articles as read or unread.

Fixed:
* Deadlock when fetching feeds in some corner situations is now resolved. (#910)
* URLs of articles are now sanitized from leading and trailing spaces. (#914)
* ATOM feeds were mistakenly changed to RSS feeds during OPML import. (#913)
* Now compiles with GCC 13. (#911)
* Freezing of GUI when fetching feeds should now be gone even on newer Qt library.
* Correct account-wide proxy is used when importing feeds.
* Article duplicity checks are now much more useful and actually working in article filters.
* Translations synced.
* All buttons from article toolbar now correctly follow tool button style.

4.3.3
-----

Added:
* Article searching was greatly improved - now you can use either text or regexp or wildcard as search phrase and you can choose whether to search just in titles or in whole article. (#886)
* Added option to focus feed/article lists with keyboard shortcuts. (545)
* Uninstaller now should detect if RSS Guard is running or not. (#529)
* Gmail: Original e-mail body is now appended to response.
* Gmail: E-mail preview now uses styling from skin for unified UX.
* Minor enhancements for OPML importing.

Fixed:
* Showing pictures from authenticated feeds now should work. (#909)
* Word-wrap is now correctly used for plain-text articles. (#900)
* Some memory leaks were patched and also SQLite database connections now share "cache" across all threads, resulting in drastically better RAM usage of the app.
* Feedly: Article state synchronization now works.
* Updated docs, updated translations.

4.3.2
-----

Added:
* Display total number of underlying feeds/categories in account's tooltip in feed list. (#881)